--- a/client/main.html
+++ b/client/main.html
@@ -8,8 +8,11 @@
 
 <template name="hello">
   <button class="mtr-list">List</button>
-  <button class="mtr-notfiy">Ping!</button>
-  <button class="mtr-run">Run</button>
-  <button class="mtr-stop">Stop</button>
+  <button class="mtr-ping">Ping!</button>
+  {{ #if running }}
+    <button class="mtr-stop">Stop</button>
+  {{ else }}
+    <button class="mtr-run">Run</button>
+  {{ /if }}
   {{ output }}
 </template>
