--- a/client/main.html
+++ b/client/main.html
@@ -3,8 +3,26 @@
 </head>
 
 <body>
+  {{> sidebar }}
   {{> main }}
 </body>
+
+<template name="sidebar">
+  <aside class="sidebar">
+    <div class="project">
+      {{ #each project in projects }}
+        {{> projectNavItem project=project }}
+      {{ /each }}
+    </div>
+    <button class="btn btn-primary mtr-create-project">New project</button>
+  </aside>
+</template>
+
+<template name="projectNavItem">
+  <div class="project">
+    {{ project.name }}
+  </div>
+</template>
 
 <template name="main">
   <div>
@@ -14,13 +32,14 @@
       Server is stopped
     {{ /if }}
   </div>
-  {{ #if running }}
-    <button class="btn btn-negative mtr-stop">Stop</button>
-  {{ else }}
-    <button class="btn btn-positive mtr-run">Run</button>
-  {{ /if }}
-
   <div>
-    <a>Open project files</a>
+    {{ #if running }}
+      <button class="btn btn-negative mtr-stop">Stop</button>
+    {{ else }}
+      <button class="btn btn-positive mtr-run">Run</button>
+    {{ /if }}
+  </div>
+  <div>
+    <button class="btn btn-default">Open project files</button>
   </div>
 </template>
