--- a/client/main.html
+++ b/client/main.html
@@ -17,7 +17,7 @@
         {{> projectNavItem project=project }}
       {{ /each }}
     </nav>
-    <button class="btn btn-primary mtr-create-project">New project</button>
+    <button class="btn btn-primary create-project mtr-create-project">New project</button>
   </aside>
 </template>
 
