--- a/client/main.html
+++ b/client/main.html
@@ -29,6 +29,12 @@
 
 <template name="main">
   <div class="main">
+    {{> projectContent project=project }}
+  </div>
+</template>
+
+<template name="projectContent">
+  <div class="project">
     <header>
       <h3>{{ project.name }}</h3>
       <button class="btn btn-default mtr-open-project">Show project files in finder</button>
@@ -48,6 +54,8 @@
       {{ /if }}
     </div>
     {{> fileTable project=project }}
+    <button class="btn btn-primary mtr-create-file">New file</button>
+
   </div>
 </template>
 
