--- a/client/main.html
+++ b/client/main.html
@@ -25,7 +25,7 @@
         {{> projectNavItem project=project }}
       {{ /each }}
     </nav>
-    <button class="btn btn-primary create-project mtr-create-project">New project</button>
+    <button class="btn btn-primary create-project mtr-new-project">New project</button>
   </aside>
 </template>
 
@@ -86,4 +86,17 @@
     <td></td>
     <td></td>
   </tr>
+</template>
+
+<template name="newProject">
+  <form>
+    <div class="form-group">
+      <label>Project name</label>
+      <input type="text" class="form-control mtr-project-name">
+    </div>
+    <div class="form-actions">
+      <button type="submit" class="btn btn-form btn-default mtr-cancel">Cancel</button>
+      <button type="submit" class="btn btn-form btn-primary mtr-create-project">Create project</button>
+    </div>
+  </form>
 </template>
